<resources>
    <string name="app_name">Family Map</string>
    <string name="serverHostText">Server Host:</string>
    <string name="serverPortText">Server Port:</string>
    <string name="userNameText">Username:</string>
    <string name="passwordText">Password: </string>
    <string name="firstNameText">First Name:</string>
    <string name="lastNameText">Last Name:</string>
    <string name="emailText">Email:</string>
    <string name="genderText">Gender:</string>
    <string name="maleText">Male</string>
    <string name="femaleText">Female</string>
    <string name="signInText">Sign In</string>
    <string name="registerText">Register</string>
    <string name="loginSuccessful">Login Successful</string>
    <string name="loginFail">Login failed!</string>
    <string name="registerSuccess">Register Successful!</string>
    <string name="registerFail">Register failed!</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="personFullName">""</string>
    <string name="eventDetails">""</string>
    <string name="pActivityFirstName">First Name</string>
    <string name="pActivityLastName">Last Name</string>
    <string name="pActivityGender">Gender</string>
    <string name="upTitle">Back</string>
    <string name="lifeEventsTitle">Life Events</string>
    <string name="familyTitle">Family</string>
    <string name="lifeStory">Life Story Lines</string>
    <string name="lifeStoryDetails">SHOW LIFE STORY LINES</string>
    <string name="familyTreeLine">Family Tree Lines</string>
    <string name="familyTreeLineDetails">SHOW FAMILY TREE LINES</string>
    <string name="spouseLine">Spouse Lines</string>
    <string name="spouseLineDetails">SHOW SPOUSE LINES</string>
    <string name="fatherSide">Father\'s Side</string>
    <string name="fatherSideDetail">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="motherSide">Mother\'s Side</string>
    <string name="motherSideDetail">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="maleEvents">Male Events</string>
    <string name="femaleEvents">Female Events</string>
    <string name="genderFilter">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout">Logout</string>
    <string name="logoutDetail">RETURN TO LOGIN SCREEN</string>
</resources>
