<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/lifeStoryLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lifeStory"
                android:textColor="@color/charcoalGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lifeStoryDetails"
                android:textColor="@color/charcoalGray" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/familyTreeLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/familyTreeLine"
                android:textColor="@color/charcoalGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/familyTreeLineDetails"
                android:textColor="@color/charcoalGray" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/spouseLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spouseLine"
                android:textColor="@color/charcoalGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spouseLineDetails"
                android:textColor="@color/charcoalGray" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/fatherSide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fatherSide"
                android:textColor="@color/charcoalGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fatherSideDetail"
                android:textColor="@color/charcoalGray" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/motherSide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/motherSide"
                android:textColor="@color/charcoalGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/motherSideDetail"
                android:textColor="@color/charcoalGray" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/maleEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maleEvents"
                android:textColor="@color/charcoalGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genderFilter"
                android:textColor="@color/charcoalGray" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/femaleEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/femaleEvents"
                android:textColor="@color/charcoalGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genderFilter"
                android:textColor="@color/charcoalGray" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/logoutSetting">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/charcoalGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logoutDetail"
                android:textColor="@color/charcoalGray" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>